test/attr/ApplicationMain/attr_main_multiple.code
// RUN: %target-language-frontend -typecheck -parse-as-library -verify %s

@main // expected-error{{'main' attribute can only apply to one type in a module}}
struct MyMain1 {
  static fn main() {
  }
}

@main // expected-error{{'main' attribute can only apply to one type in a module}}
enum MyMain2 {
  static fn main() {
  }
}

@main // expected-error{{'main' attribute can only apply to one type in a module}}
class MyMain3 {
  static fn main() {
  }
}
